# Snake3D

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: core-refactor.agent.md  full-refactor.agent.md
.github/instructions/: core-boundaries.instructions.md  test-style.instructions.md  verify-workflow.instructions.md
.github/prompts/: add-feature.prompt.md  plan-snake3D.prompt.md
.github/workflows/: ci.yml  deploy-pages.yml
src/snake3d/: __init__.py  __main__.py  serve_web.py
src/snake3d/adapters/: __init__.py  terminal_input.py  terminal_input_windows.py  terminal_renderer.py  terminal_size.py
src/snake3d/core/: __init__.py  engine.py  models.py  rules.py  state.py
src/snake3d/ports/: __init__.py  input.py  renderer.py
tests/: test_engine.py  test_rules.py  test_terminal_input.py  test_terminal_renderer.py
web/: index.html
