[tool.poetry]
name = "snake3d"
version = "0.1.0"
description = "A terminal 3D snake game with a NumPy-backed core and replaceable renderer."
authors = ["Rami <rami@example.com>"]
readme = "README.md"
packages = [{ include = "snake3d", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = "^2.2.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
snake3d = "snake3d.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
