[tool.poetry]
name = "snake3d"
version = "0.1.0"
description = "A terminal 3D snake game with a NumPy-backed core and replaceable renderer."
authors = ["Rami <rami@example.com>"]
readme = "README.md"
packages = [{ include = "snake3d", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = "^2.2.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
snake3d = "snake3d.__main__:main"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
packages = ["snake3d"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
